Nested header element in body element

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <div>
         <p>Excepteur sint occaecat cupidatat non proident</p>
-        <p>sunt in culpa qui officia deserunt mollit anim id est laborum:</p>
+        <p>sunt in culpa qui officia mollit anim id est laborum:</p>
         <figure>
             <blockquote>
                 <p>"Lorem ipsum dolor sit amet, <i>"consectetur adipiscing elit"</i></p>
