Actually nested <header> in <body>

--- a/index.html
+++ b/index.html
@@ -2,20 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="author" content="PsionicProtocol"/>
-    <meta name="description" content="HTML plain blog practice"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="PsionicProtocol">
+    <meta name="description" content="HTML plain blog practice">
     <title>HTML Practice</title>
 </head>
-<header>
-    <hgroup>
-        <article>
-            <h1 id="Blog Title">HTML Blog!</h1>
-            <p>Created for The Odin Project's "Working with text" Lesson</p>
-        </article>
-    </hgroup>
-</header>
 <body>
+<header>
+      <article>
+        <h1>HTML Blog!</h1>
+        <p>Created for The Odin Project's "Working with text" Lesson</p>
+      </article>
+</header>
     <div>
         <h2>Interesting Content Here!</h2>
     </div>
